--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
-ESSAConfig.plist
+EcosystemSampleApp/config.plist
 
 ## Other
 *.moved-aside
