--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+Appfile
+Fastfile
+Gymfile
+fabric.keys
+fabric.txt
