--- a/EcosystemSampleApp/Info.plist
+++ b/EcosystemSampleApp/Info.plist
@@ -17,13 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.0.0</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
-		<string>4b7647b5860d29039e16910e281fcf8d9cad21bb</string>
+		<string></string>
 		<key>Kits</key>
 		<array>
 			<dict>
