--- a/EcosystemSampleApp.xcodeproj/xcshareddata/xcschemes/EcosystemSampleApp.xcscheme
+++ b/EcosystemSampleApp.xcodeproj/xcshareddata/xcschemes/EcosystemSampleApp.xcscheme
@@ -62,6 +62,12 @@
             ReferencedContainer = "container:EcosystemSampleApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
