--- a/EcosystemSampleApp/Info.plist
+++ b/EcosystemSampleApp/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.58</string>
+	<string>1.2.59</string>
 	<key>CFBundleVersion</key>
-	<string>50</string>
+	<string>51</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
@@ -44,6 +44,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Photo library access is required for backup and restore of your wallet</string>
+	<string>Photo library access is required for backup and restore of your kin wallet</string>
 </dict>
 </plist>
