--- a/EcosystemSampleApp/Info.plist
+++ b/EcosystemSampleApp/Info.plist
@@ -17,11 +17,16 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.60</string>
+	<string>1.2.66</string>
 	<key>CFBundleVersion</key>
-	<string>52</string>
+	<string>57</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
